# Chess

./: CMakeLists.txt  Chess.sln
Chess/: Chess.vcxproj
src/: main.cpp
src/Base/: Game.cpp  Game.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/Chess/: Board.cpp  Board.h  ChessScene.cpp  ChessScene.h  InputHandler.cpp  InputHandler.h  Piece.cpp  Piece.h  ScannedCell.cpp  ScannedCell.h
